# learning_lua

./: .gitignore  CMakeLists.txt  README.md  init.lua  make_win.bat
3rd/: CMakeLists.txt
3rd/lua/: CMakeLists.txt
3rd/lua-bit/: CMakeLists.txt
3rd/lua-filesystem/: CMakeLists.txt
3rd/lua-protobuf/: CMakeLists.txt
cmake/: common.cmake  compiler.cmake  vsuserfile.vcxproj.user.in
doc/: Lua源码划分.emmx  lua源码划分.xmind  readnote.md  readnote.txt
res/: config.xml
res/lua/: cppcalllua.lua  init.lua  setglobalvalue.lua  target.lua
sdk/cmake/: compiler.cmake  platform.cmake
sdk/include/gfl/: compiler.h  gfl.h  gfl_root.h  platform.h  standard_c.h  standard_cpp.h
sdk/include/gfl/base/: dll_loader.h  file_system.h
sdk/include/gfl/utils/: singleton.h  string_util.h
src/: CMakeLists.txt  make_win.bat
src/gfl/: CMakeLists.txt
src/gfl/include/gfl/: gfl.h
src/gfl/include/gfl/base/: file_sys.h
src/gfl/include/gfl/utils/: lua_util.h  options.h  string_util.h
src/gfl/src/base/: dll_loader.cpp  file_sys.cpp  gfl.cpp
src/gfl/src/utils/: lua_util.cpp  options.cpp  string_util.cpp
src/lfs/: CMakeLists.txt
src/lua/: CMakeLists.txt  lua.h
src/lua-5.2.2/: CMakeLists.txt
src/lua-5.2.2/lua-protobuf/: pb.c
src/lua-5.2.2/mylib/: mylib.c  test.lua
src/lua-launcher/: CMakeLists.txt  launcher.cpp  luacpp.h  pch.h  utils.cpp  utils.h
src/lua-launcher/core/: custom_allocator.cpp  custom_allocator.h  launcher.cpp  lua_engine.cpp  lua_engine.h
src/lua-launcher/test/: cppcalllua.lua  custom_searcher.lua  luacallcpp.lua  test_case.h
src/lua-protobuf/: CMakeLists.txt
src/mylib/: CMakeLists.txt  mylib.c
src/output/Debug/: lpblib.exp  lpblib.ilk  lpblib.lib  lua.ilk  lua5.2.exp  lua5.2.ilk  lua5.2.lib  luac.ilk  lualib.lib  luapb.exp  luapb.lib  mylib.exp  mylib.ilk  mylib.lib
test/: init.lua  run.bat  target.lua  test.lua
test/test/: set_env.lua  test_entry.lua
test/test/test_coroutine/: trans_data.lua
test/test/test_customlib/: run.bat  test_mylib.lua
test/test/test_function/: test_function.lua
test/test/test_loader/: test.lua
test/test/test_samples/require/b/: b.lua
test/test_coroutine/: test.lua
test/test_customlib/: run.bat  test_lpblib.lua  test_mylib.lua
test/test_samples/: concat.lua  select.lua
test/utils/: protoc.lua
utils/: file_sys.lua  util.lua
