SET(3RD_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
SET(3RD_PROJECT_FOLDER_PREFIX "")

SET(LUA_SRC_DIR ${3RD_ROOT_DIR}/lua/lua-5.2.4/src)
SET(LUA_STATIC_LIB lualib)
SET(LUA_SHARED_LIB lua5.2)
SET(LUA_COMPILER luac)
SET(LUA_INTERPRETER lua)

ADD_SUBDIRECTORY(${3RD_ROOT_DIR}/lua)
ADD_SUBDIRECTORY(${3RD_ROOT_DIR}/lua-filesystem)
ADD_SUBDIRECTORY(${3RD_ROOT_DIR}/lua-protobuf)