CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT("lua_workspace")

SET(COMMON_OUTPUT
    ${CMAKE_HOME_DIRECTORY}/output
)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${COMMON_OUTPUT})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${COMMON_OUTPUT})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${COMMON_OUTPUT})

ADD_SUBDIRECTORY(${CMAKE_HOME_DIRECTORY}/lua-5.2.2)
ADD_SUBDIRECTORY(${CMAKE_HOME_DIRECTORY}/mylib)
ADD_SUBDIRECTORY(${CMAKE_HOME_DIRECTORY}/lua-protobuf)
