CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(lua-bit)

SET(SRC_LUABIT bit.c)
SET_PROPERTY(
    SOURCE ${SRC_LUABIT}
    APPEND
    PROPERTY COMPILE_DEFINITIONS
    LUA_LIB
)

SET(LIB_NAME luabit)

INCLUDE_DIRECTORIES(${LUA_SRC_DIR})
LINK_DIRECTORIES(${MAGE_BIN_DIR}/${CMAKE_BUILD_TYPE})

ADD_LIBRARY(${LIB_NAME} SHARED ${SRC_LUABIT})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${LUA_SHARED_LIB})
# 解决 require 失败的问题
SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES OUTPUT_NAME "bit")

IF(MAGE_PLATFORM_WINDOWS)
    CREATE_VCPROJ_USERFILE(${LIB_NAME})
    TARGET_COMPILE_DEFINITIONS(${LIB_NAME} PRIVATE LUA_BUILD_AS_DLL)
ENDIF()
