PROJECT(launcher)

SET(SRC_LAUNCHER 
    launcher.cpp
    utils.cpp
)

SET(LIB_NAME launcher)

INCLUDE_DIRECTORIES(${LUA_SRC_DIR})
LINK_DIRECTORIES(${MAGE_BIN_DIR}/${CMAKE_BUILD_TYPE})

ADD_EXECUTABLE(${LIB_NAME} ${SRC_LAUNCHER})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${LUA_SHARED_LIB})

IF(MAGE_PLATFORM_WINDOWS)
    CREATE_VCPROJ_USERFILE(${LIB_NAME})
ENDIF()
