PROJECT(launcher)

SET(SRC_LAUNCHER 
    launcher.cpp
)

SET(LIB_NAME launcher)

INCLUDE_DIRECTORIES(${LUA_SRC_DIR})
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/gfl/include)
LINK_DIRECTORIES(${MAGE_BIN_DIR})

ADD_EXECUTABLE(${LIB_NAME} ${SRC_LAUNCHER})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${LUA_SHARED_LIB} gfl)

IF(MAGE_PLATFORM_WINDOWS)
    CREATE_VCPROJ_USERFILE(${LIB_NAME})
ENDIF()
