PROJECT(lua-protobuf)

SET(SRC_LUAPB pb.c)
SET_PROPERTY(
    SOURCE ${SRC_LUAPB}
    APPEND
    PROPERTY COMPILE_DEFINITIONS
    LUA_LIB
)

INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/lua-5.2.2/src)
LINK_DIRECTORIES(${COMMON_OUTPUT}/${CMAKE_BUILD_TYPE})

ADD_LIBRARY(lpblib SHARED ${SRC_LUAPB})
TARGET_LINK_LIBRARIES(lpblib lua5.2)

if (WIN32 AND NOT CYGWIN)
    TARGET_COMPILE_DEFINITIONS(lpblib PRIVATE LUA_BUILD_AS_DLL)
endif()
