PROJECT(lua-protobuf)

SET(SRC_LUAPB pb.c)
SET_PROPERTY(
    SOURCE ${SRC_LUAPB}
    APPEND
    PROPERTY COMPILE_DEFINITIONS
    LUA_LIB
)

SET(LIB_NAME luapb)

INCLUDE_DIRECTORIES(${LUA_SRC_DIR})
LINK_DIRECTORIES(${MAGE_BIN_DIR}/${CMAKE_BUILD_TYPE})

ADD_LIBRARY(${LIB_NAME} SHARED ${SRC_LUAPB})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${LUA_SHARED_LIB})

IF(MAGE_PLATFORM_WINDOWS)
    CREATE_VCPROJ_USERFILE(${LIB_NAME})
    TARGET_COMPILE_DEFINITIONS(${LIB_NAME} PRIVATE LUA_BUILD_AS_DLL)
ENDIF()
