PROJECT(mylib)

SET(SRC_MYLIB mylib.c)
SET_PROPERTY(
    SOURCE ${SRC_MYLIB}
    APPEND
    PROPERTY COMPILE_DEFINITIONS
    LUA_LIB
)

SET(LIB_NAME mylib)

INCLUDE_DIRECTORIES(${LUA_SRC_DIR})
LINK_DIRECTORIES(${COMMON_OUTPUT}/${CMAKE_BUILD_TYPE})

ADD_LIBRARY(${LIB_NAME} SHARED ${SRC_MYLIB})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${LUA_SHARED_LIB})

IF(WIN32 AND NOT CYGWIN)
    TARGET_COMPILE_DEFINITIONS(${LIB_NAME} PRIVATE LUA_BUILD_AS_DLL)
ENDIF()
